(library
 (public_name camlzip)
 (synopsis "OCaml ZIP interface")
 (modules gzip zip zlib)
 (wrapped false)
 (libraries stdlib-shims)
 (flags (:standard -warn-error -A))
 (c_names zlibstubs)
 (c_flags
  (:include c_flags.sexp))
 (c_library_flags
  (:include c_library_flags.sexp)))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (deps
  (:discover config/discover.exe))
 (action
  (run %{discover})))
